Decreasing size of the 'indexed-resources.index' file